[releng] add VPDsl 4 Capella
Change-Id: Ib0814593563b14bfdf03f183dace87465529b1b0
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>