@@ -357,7 +357,7 @@ This file was generated by Eclipse EGF
         </echoproperties>
     </target>
 	
-	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,PublishStep_5,releng_feature,product,PublishStep_8,product_feature,extension_sdk,PublishStep_11,extension_sdk_feature,AntStep_13,all_studio_features,TP_win32-win32-x86,AntStep_16" />
+	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,PublishStep_5,releng_feature,product,PublishStep_8,product_feature,extension_sdk,PublishStep_11,extension_sdk_feature,vpdsl,PublishStep_14,vpdsl_feature,AntStep_16,all_studio_features,TP_win32-win32-x86,AntStep_19" />
 	<target name="TP_juno" depends="TP_juno_build_studio_platform" />
 	<target name="TP_juno_build_studio_platform" depends="TP_juno_build_studio_platform_setup_platform,TP_juno_build_studio_platform_install_query_legacy_features,TP_juno_build_studio_platform_install_kitalpha_features,TP_juno_build_studio_platform_install_capella_features,TP_juno_build_studio_platform_install_capella_egf_features" />
 	<target name="TP_juno_build_studio_platform_setup_platform" depends="TP_juno_build_studio_platform_setup_platform_TP_juno,TP_juno_build_studio_platform_setup_platform_install_cots_features,TP_juno_build_studio_platform_setup_platform_install_diffmerge,TP_juno_build_studio_platform_setup_platform_install_ecoretools2" />
@@ -479,6 +479,43 @@ This file was generated by Eclipse EGF
 		</buckminster>
     </target>
 
+    <target name="vpdsl" depends="init,install.buckminster">
+        <echo message="Importing projects into workspace ${workspace} and binaries into target platform" />
+
+		<echo message="install JRE ${env.JAVA_HOME}" />
+    	<buckminster command="installJRE">
+            <cmdargs>
+                <arg value="--location" />
+                <arg value="${env.JAVA_HOME}" />
+            </cmdargs>
+        </buckminster>
+
+
+		<echo message="import target platform" />
+        <buckminster command="importtargetdefinition">
+            <cmdargs>
+                <arg value="--active" />
+                <arg value="${relengDir}/buckminster_vpdsl/build.target" />
+            </cmdargs>
+        </buckminster>
+		<echo message="provision : import projects in workspace" />
+        <buckminster command="import">
+            <!-- Uncomment to debug <globargs><jvmarg value="-agentlib:jdwp=transport=dt_socket,address=8000,server=y,suspend=y"/></globargs> -->
+            <cmdargs>
+                <arg value="${relengDir}/buckminster_vpdsl/build.mspec" />
+            </cmdargs>
+        </buckminster>
+
+
+        <echo message="Invoking all eclipse builders on workspace ${workspace}" />
+        <buckminster command="build" >
+            <cmdargs>
+                <arg value="--clean" />
+                <arg value="--thorough" />
+            </cmdargs>
+		</buckminster>
+    </target>
+
 	<target name="PublishStep_5" depends="init,install.buckminster" >
 
 		
@@ -566,8 +603,37 @@ This file was generated by Eclipse EGF
 		
 	</target>
 
+	<target name="PublishStep_14" depends="init,install.buckminster" >
 
-	<target name="AntStep_13">
+		
+		<echo message="Generate Site"/>
+		<buckminster command="perform">
+			<globargs>
+				<arg value="-Dsite.include.top=true"/>
+				<arg value="-Dsite.signing=false"/>				
+				<arg value="-Dcbi.include.source=true"/>				
+			</globargs>
+			<cmdargs>
+				<arg value="org.polarsys.capella.ta.viewpoint.dsl.feature:eclipse.feature#site.p2" />
+			</cmdargs>
+		</buckminster>
+
+		<echo message="Publish site"/>
+		<mkdir dir="${publish}/org.polarsys.capella.ta.viewpoint.dsl.feature/site.p2/"/>
+		<copy todir="${publish}/org.polarsys.capella.ta.viewpoint.dsl.feature/site.p2/">
+			<fileset dir="${result}/output">
+				<include name="org.polarsys.capella.ta.viewpoint.dsl.feature*/site.p2/*"/>
+				<include name="org.polarsys.capella.ta.viewpoint.dsl.feature*/site.p2/**"/>
+			</fileset>
+			<filtermapper>
+				<replaceregex pattern=".*site\.p2" replace="" />
+			</filtermapper>
+		</copy>
+		
+	</target>
+
+
+	<target name="AntStep_16">
 		<antcall target="move_egf_to_tools2"/>
 	</target>
 
@@ -577,7 +643,7 @@ This file was generated by Eclipse EGF
 </target>
 
 
-	<target name="AntStep_16">
+	<target name="AntStep_19">
 		<antcall target="cleanUp"/>
 	</target>
 
@@ -585,6 +651,7 @@ This file was generated by Eclipse EGF
     <delete dir="${publish}/org.polarsys.capella.extension.sdk.feature" verbose="true"/>
     <delete dir="${publish}/org.polarsys.capella.studio.releng.feature" verbose="true"/>
     <delete dir="${publish}/org.polarsys.capella.studio.product.feature"/>
+    <delete dir="${publish}/org.polarsys.capella.ta.viewpoint.dsl.feature"/>
 </target>
 
 
@@ -617,6 +684,7 @@ This file was generated by Eclipse EGF
 				<repository location="file:/${publish}/org.polarsys.capella.studio.releng.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.capella.extension.sdk.feature/site.p2" />
 				<repository location="file:/${publish}/org.polarsys.capella.studio.product.feature/site.p2" />
+				<repository location="file:/${publish}/org.polarsys.capella.ta.viewpoint.dsl.feature/site.p2" />
 			</source>
 		</p2.mirror>
 	</target>
@@ -1294,6 +1362,36 @@ This file was generated by Eclipse EGF
             </args>
         </eclipse.launch>
 	</target>	
+	<target name="vpdsl_feature" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.capella.ta.viewpoint.dsl.feature/site.p2" />
+                
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.ta.viewpoint.dsl.feature.feature.group" />
+
+            </args>
+        </eclipse.launch>
+	</target>	
 	<target name="TP_win32-win32-x86_build_studio_platform_setup_platform_TP_win32-win32-x86" depends="init,install.director" >
         <eclipse.launch app="director">
             <args>
@@ -1809,6 +1907,8 @@ This file was generated by Eclipse EGF
                 <arg value="file:/${publish}/org.polarsys.capella.extension.sdk.feature/site.p2" />
                 <arg value="-r" />
                 <arg value="file:/${publish}/org.polarsys.capella.studio.product.feature/site.p2" />
+                <arg value="-r" />
+                <arg value="file:/${publish}/org.polarsys.capella.ta.viewpoint.dsl.feature/site.p2" />
                 
 
 
@@ -1824,6 +1924,10 @@ This file was generated by Eclipse EGF
                 <arg value="org.polarsys.capella.studio.product.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.polarsys.capella.studio.product.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.ta.viewpoint.dsl.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.ta.viewpoint.dsl.source.feature.feature.group" />
 
             </args>
         </eclipse.launch>
